--- a/text-and-sentiment-analysis-in-R.Rmd
+++ b/text-and-sentiment-analysis-in-R.Rmd
@@ -38,4 +38,22 @@ hamlet <- tibble(line=1:length(lines), text=lines)
 hamlet_tokens <- hamlet %>% unnest_tokens(word, text)
 hamlet_tokens %>% count(word, sort = TRUE)
 ```
+```{r}
+data(stop_words)
+stop_words
+```
 
+```{r}
+important_hamlet_tokens <- hamlet_tokens %>% anti_join(stop_words)
+important_hamlet_tokens
+```
+
+```{r}
+important_hamlet_tokens %>% count(word, sort=TRUE)
+```
+
+```{r}
+hamlet %>% unnest_tokens(word, text) %>%
+  anti_join(stop_words) %>%
+  count(word, sort = TRUE)
+```
