Feat: Incorporate Gutenberg data, enhance analysis with visualizations
In this commit, several substantial enhancements to our text analysis script have been made:

- Integration of the gutenbergr library for accessing publicly available literature.
- Download and processing of the Grimm's Fairy Tales text from the Gutenberg Project.
- Tokenization, stop word filtering, and word count for the Grimm's Fairy Tales.
- Filter applied to keep only words with more than 100 occurrences.
- Creation of a visualization showing word frequencies in the Grimm's Fairy Tales text using ggplot2.

These additions make the script more versatile and visually informative, and extend its applicability to any text available in the Gutenberg Project.

--- a/text-and-sentiment-analysis-in-R.Rmd
+++ b/text-and-sentiment-analysis-in-R.Rmd
@@ -57,3 +57,37 @@ hamlet %>% unnest_tokens(word, text) %>%
   anti_join(stop_words) %>%
   count(word, sort = TRUE)
 ```
+
+```{r}
+library(gutenbergr)
+```
+
+```{r}
+grimm_tales <- gutenberg_download(2591)
+grimm_tales
+```
+
+```{r}
+grimm_tales %>%
+  unnest_tokens(word, text) %>%
+  anti_join(stop_words) %>%
+  count(word, sort = TRUE)
+```
+
+```{r}
+counts <- grimm_tales %>%
+  unnest_tokens(word, text) %>%
+  anti_join(stop_words) %>%
+  count(word, sort = TRUE) %>%
+  filter(n > 100)
+
+counts
+```
+
+```{r}
+counts <- counts %>% mutate(word = reorder(word, n))
+```
+
+```{r}
+counts %>% ggplot(aes(n, word)) + geom_col() + labs(y=NULL)
+```
