Feat: Introduce sentiment analysis on Grimm's Fairy Tales
This commit brings significant additions to our text analysis capabilities:

- Retrieval and display of the NRC sentiment lexicon.
- Re-processing of the Grimm's Fairy Tales text for sentiment analysis.
- Association of the Grimm's Fairy Tales words with their corresponding sentiments.
- Analysis of the frequency of words associated with "positive" sentiment.
- Total count of words associated with the sentiment of "joy".
- Visual representation of the distribution of sentiments in the Grimm's Fairy Tales text using ggplot2.

With these enhancements, the script can now provide insights into the emotional tone of the analyzed texts.

--- a/text-and-sentiment-analysis-in-R.Rmd
+++ b/text-and-sentiment-analysis-in-R.Rmd
@@ -91,3 +91,48 @@ counts <- counts %>% mutate(word = reorder(word, n))
 ```{r}
 counts %>% ggplot(aes(n, word)) + geom_col() + labs(y=NULL)
 ```
+
+```{r}
+sentiments <- get_sentiments("nrc")
+sentiments
+```
+
+```{r}
+sentiments %>% count(sentiment)
+```
+
+```{r}
+grimm_tales <- gutenberg_download(2591) %>%
+              unnest_tokens(word, text) %>%
+              anti_join(stop_words)
+grimm_tales
+```
+
+```{r}
+grimm_tales_sentiments <- grimm_tales %>% inner_join(sentiments)
+grimm_tales_sentiments
+```
+
+```{r}
+grimm_tales_sentiments %>% 
+  filter(sentiment=="positive") %>%
+  count(word, sort=TRUE)
+```
+
+```{r}
+grimm_tales_sentiments %>%
+  filter(sentiment=="joy") %>%
+  count(word) %>% 
+  summarise(total=sum(n))
+```
+
+```{r}
+grimm_tales_sentiments %>% count(sentiment)
+```
+
+```{r}
+grimm_tales_sentiments %>%
+  count(sentiment) %>%
+  mutate(sentiment = reorder(sentiment, n)) %>%
+  ggplot(aes(n, sentiment)) + geom_col() + labs(y=NULL)
+````
