Feat: Implement sentiment analysis over time in Grimm's Fairy Tales
This commit introduces additional sophistication to the sentiment analysis of our text:

- Modifying the Grimm's Fairy Tales data frame to include a line number for each tokenized word.
- Joining this data frame with the sentiment lexicon, allowing sentiments to be associated with each word.
- Grouping the text into blocks based on line numbers for sentiment analysis over time.
- Pivoting the data to get a wide format where each sentiment has its own column.
- Calculating a new 'sentiment' metric, subtracting the count of negative words from positive words in each block.
- Visualizing the overall sentiment and 'joy' sentiment over time using ggplot2.

This set of changes adds a temporal aspect to our analysis, allowing us to visualize the emotional arc of the text.

--- a/text-and-sentiment-analysis-in-R.Rmd
+++ b/text-and-sentiment-analysis-in-R.Rmd
@@ -135,4 +135,81 @@ grimm_tales_sentiments %>%
   count(sentiment) %>%
   mutate(sentiment = reorder(sentiment, n)) %>%
   ggplot(aes(n, sentiment)) + geom_col() + labs(y=NULL)
-````
+```
+
+```{r}
+grimm_tales <- gutenberg_download(2591) %>% 
+              mutate(linenumber=row_number()) %>% 
+              unnest_tokens(word, text) %>% anti_join(stop_words)
+grimm_tales
+```
+
+```{r}
+grimm_tales_sentiments <- grimm_tales %>% 
+                         inner_join(sentiments)
+grimm_tales_sentiments
+```
+
+```{r}
+grimm_tales_blocks <- grimm_tales_sentiments %>% 
+                     count(block=linenumber%/%80, sentiment)
+grimm_tales_blocks
+```
+
+```{r}
+grimm_tales_blocks <- grimm_tales_blocks %>% 
+                     pivot_wider(names_from = sentiment, 
+                                 values_from = n, 
+                                 values_fill = 0)
+grimm_tales_blocks
+```
+
+```{r}
+grimm_tales_blocks <- grimm_tales_blocks %>%
+                         mutate(sentiment = positive - negative)
+grimm_tales_blocks
+```
+
+```{r}
+grimm_tales_blocks %>% ggplot(aes(block, sentiment)) + geom_col()
+```
+
+```{r}
+grimm_tales_blocks %>% ggplot(aes(block, joy)) + geom_col()
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
