Feat: Introduce wordcloud visualization of Grimm's Fairy Tales text
This commit implements visualization of word frequency and sentiments using wordclouds:

- Addition of the wordcloud library.
- Creation of a word count dataframe for the Grimm's Fairy Tales text.
- Generation of a basic wordcloud based on word frequency.
- Generation of a wordcloud with specific minimum frequency and maximum word requirements.
- Enhancement of the wordcloud with color customization using the RColorBrewer palette.
- Creation of a sentiment count dataframe, which is then used to generate wordclouds for the 'joy' and 'fear' sentiments.

These changes provide an engaging and visually appealing way to represent text data and sentiment analysis results.

--- a/text-and-sentiment-analysis-in-R.Rmd
+++ b/text-and-sentiment-analysis-in-R.Rmd
@@ -179,31 +179,49 @@ grimm_tales_blocks %>% ggplot(aes(block, joy)) + geom_col()
 ```
 
 ```{r}
-
+library(wordcloud)
 ```
 
 ```{r}
-
+grimm_tales_count <- grimm_tales %>% count(word, sort = TRUE)
 ```
 
 ```{r}
-
+wordcloud(grimm_tales_count$word, grimm_tales_count$n, 
+          min.freq = 25, max.words = 50, random.order = FALSE)
 ```
 
 ```{r}
-
+grimm_tales_count %>% with(wordcloud(word, n, 
+          min.freq = 25, max.words = 50, random.order = FALSE))
 ```
 
 ```{r}
-
+grimm_tales_count %>% with(wordcloud(word, n, 
+          min.freq = 25, max.words = 50, random.order = FALSE,
+          colors=brewer.pal(8, "Dark2")))
+```
+```{r}
+grimm_tales_sentiments <- grimm_tales %>% 
+                         inner_join(sentiments) %>% 
+                         count(word, sentiment, sort=TRUE) %>% 
+                         pivot_wider(names_from=sentiment, 
+                                     values_from=n, 
+                                     values_fill=0)
 ```
 
 ```{r}
-
+grimm_tales_sentiments %>% with(wordcloud(word, joy, 
+                                       min.freq=10,
+                                       random.color = FALSE,
+                                       colors = brewer.pal(8, "PuOr")))
 ```
 
 ```{r}
-
+grimm_tales_sentiments %>% with(wordcloud(word, fear, 
+                                       min.freq=10,
+                                       random.color = FALSE,
+                                       colors = brewer.pal(12, "Paired")))
 ```
 
 ```{r}
