Feat: Implement bigram analysis and visualization in Grimm's Fairy Tales
In this commit, we dive into bigram analysis and graph-based visualization:

- Re-fetching of the Grimm's Fairy Tales text, with a line number added for each tokenized word.
- Bigram tokenization of the text.
- Cleaning of the bigrams by separating them into two words and removing stop words.
- Rejoining of the bigrams and counting of their occurrences.
- Transformation of the bigram count into an igraph object.
- Visualization of the bigram graph using ggraph.
- Refinement of the graph visualization, including edge weights and custom node colors.
- Adjustments to the graph creation process to include only bigrams with a minimum count.

These changes add a new dimension to our text analysis capabilities, with insights into the co-occurrence of words and their relationships.

--- a/text-and-sentiment-analysis-in-R.Rmd
+++ b/text-and-sentiment-analysis-in-R.Rmd
@@ -212,7 +212,7 @@ grimm_tales_sentiments <- grimm_tales %>%
 
 ```{r}
 grimm_tales_sentiments %>% with(wordcloud(word, joy, 
-                                       min.freq=10,
+                                       min.freq=15,
                                        random.color = FALSE,
                                        colors = brewer.pal(8, "PuOr")))
 ```
@@ -222,6 +222,131 @@ grimm_tales_sentiments %>% with(wordcloud(word, fear,
                                        min.freq=10,
                                        random.color = FALSE,
                                        colors = brewer.pal(12, "Paired")))
+```
+
+```{r}
+grimm_tales <- gutenberg_download(2591) %>% 
+              mutate(linenumber=row_number())
+```
+
+```{r}
+grimm_tales_bigrams <- grimm_tales %>% 
+  unnest_tokens(bigram, text, token = "ngrams", n = 2)
+grimm_tales_bigrams
+```
+
+```{r}
+grimm_tales_bigrams <- grimm_tales_bigrams %>%
+      separate(bigram, c("word1", "word2"), sep = " ") 
+grimm_tales_bigrams
+```
+
+```{r}
+data(stop_words)
+
+grimm_tales_bigrams <- grimm_tales_bigrams %>%
+      filter(!word1 %in% stop_words$word) %>%
+      filter(!word2 %in% stop_words$word)
+
+grimm_tales_bigrams
+```
+
+```{r}
+grimm_tales_bigrams <- grimm_tales_bigrams %>%
+                      filter(!is.na(word1)) %>% 
+                      filter(!is.na(word2))
+grimm_tales_bigrams
+```
+
+```{r}
+grimm_tales_bigrams <- grimm_tales_bigrams %>%
+                      unite(bigram, word1, word2, sep=" ")
+grimm_tales_bigrams
+```
+
+```{r}
+grimm_tales_bigrams <- grimm_tales %>% 
+                      unnest_tokens(bigram, text, token = "ngrams", n = 2) %>%
+                      separate(bigram, c("word1", "word2"), sep = " ") %>%
+                      filter(!word1 %in% stop_words$word) %>%
+                      filter(!word2 %in% stop_words$word) %>%
+                      filter(!is.na(word1)) %>% 
+                      filter(!is.na(word2)) %>% 
+                      unite(bigram, word1, word2, sep=" ")
+
+grimm_tales_bigrams
+```
+
+```{r}
+bigram_counts <- grimm_tales_bigrams %>% count(bigram, sort=TRUE)
+bigram_counts
+```
+
+```{r}
+bigram_counts <- grimm_tales %>% 
+                      unnest_tokens(bigram, text, token = "ngrams", n = 2) %>%
+                      separate(bigram, c("word1", "word2"), sep = " ") %>%
+                      filter(!word1 %in% stop_words$word) %>%
+                      filter(!word2 %in% stop_words$word) %>%
+                      filter(!is.na(word1)) %>% 
+                      filter(!is.na(word2)) %>% 
+                      count(word1, word2, sort=TRUE)
+
+bigram_counts
+```
+
+```{r}
+library(igraph)
+
+bigram_graph <- bigram_counts %>%
+                  filter(n >= 7) %>%
+                  graph_from_data_frame()
+bigram_graph
+```
+
+```{r}
+library(ggraph)
+
+ggraph(bigram_graph, layout = "fr") +
+  geom_edge_link() +
+  geom_node_point() +
+  geom_node_text(aes(label = name), vjust = 1, hjust = 1)
+```
+
+```{r}
+ggraph(bigram_graph, layout = "fr") +
+     geom_edge_link(aes(edge_alpha = n), show.legend = FALSE,
+                    arrow = grid::arrow(type = "closed", length = unit(2, "mm")), 
+                    end_cap = circle(1, "mm")) +
+     geom_node_point(color = "lightblue", size = 2) +
+     geom_node_text(aes(label = name), size = 2) +
+     theme_void()
+```
+
+```{r}
+bigram_graph <- bigram_counts %>%
+    filter(n >= 3) %>%
+    graph_from_data_frame()
+
+ggraph(bigram_graph, layout = "fr") +
+     geom_edge_link(aes(edge_alpha = n), show.legend = FALSE,
+                    arrow = grid::arrow(type = "closed", length = unit(1, "mm")), 
+                    end_cap = circle(0.5, "mm")) +
+     geom_node_point(color = "lightblue", size = 0.5) +
+     geom_node_text(aes(label = name), size = 1) +
+     theme_void()
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
 ```
 
 ```{r}
