--- a/text-and-sentiment-analysis-in-R.Rmd
+++ b/text-and-sentiment-analysis-in-R.Rmd
@@ -474,9 +474,22 @@ hamlet_bigrams <- hamlet_bigrams %>%
 ```
 
 ```{r}
+# Count the bigrams
+bigram_counts <- hamlet_bigrams %>% count(word1, word2, sort = TRUE)
 
+# Generate the graph
+bigram_graph <- bigram_counts %>%
+  graph_from_data_frame()
+
+# Plot the graph
+ggraph(bigram_graph, layout = "fr") +
+  geom_edge_link() +
+  geom_node_point() +
+  geom_node_text(aes(label = name), vjust = 1, hjust = 1) +
+  theme_void()
 ```
 
 ```{r}
+
 
 ```
